samples/_failures_safe/1761150038_2a44e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60f61538.c: In function ‘main’:
./samples/SAFE/__tmp_60f61538.c:164:9: error: expected declaration or statement at end of input
  164 |         int from, to, weight;
      |         ^~~
./samples/SAFE/__tmp_60f61538.c:164:9: error: expected declaration or statement at end of input
